--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <section>
-            <img src="./Assets/android-chrome-512x512.png" alt="photo">
+            <a href="./Assets/android-chrome-512x512.png"><img src="./Assets/android-chrome-512x512.png" alt="photo"></a>
             <h1>MARINE MIGNOT</h1>
             <h2>Developpeuse Web Junior</h2>
         </section>
